envoyproxy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: http
              route_config:
                name: api
                virtual_hosts:
                  - name: backend
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: "api"
              http_filters:
                - name: envoy.filters.http.JwtAuthentication
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      provider_okta:
                        issuer: https://auth.dev.legal-i.ch/
                        audiences:
                          - https://api.legal-i.ch,
                          - https://legal-i-dev.eu.auth0.com/userinfo
                        remote_jwks:
                          http_uri:
                            uri: https://legal-i-dev.eu.auth0.com/.well-known/jwks.json
                            cluster: oauth_jwks_cluster
                            timeout: 1s
                          cache_duration:
                            seconds: 300
                        forward_payload_header: x-jwt-payload
                    rules:
                      - match:
                          prefix: /
                        requires:
                          provider_name: provider_okta
                - name: envoy.router
                  typed_config: {}
  clusters:
    - name: api
      connect_timeout: 5s
      load_assignment:
        cluster_name: api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8001
                      ipv4_compat: true
    - name: oauth_jwks_cluster
      type: STRICT_DNS
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: oauth_jwks_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: legal-i-dev.eu.auth0.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: https://legal-i-dev.eu.auth0.com
